 5. Fix home screen if library is empty.
 6. Fix error logged when only 1 grid row.
 7. Append 's' to decades.
 8. Add 'Random Albums/Releases', and 'Recently Updated Albums/Releases', to
    scrolled lists.
 9. Recurse favourites folders for 'Radios' - thanks to Michael Herger.
10. Fix list corruption when pinning items.
11. Enable 'Show image' hover button for home screen items.

6.0.0
-----
 1. Split years into decades, if 2 or more.
 2. Allow using grid for years.
 3. Slightly blur-behind popup messages.
 4. Add 'Newest' to album sorts.
 5. Add, server-side, option to use smaller grid if icon only and narrow width.
 6. Adjust display of track numbers in browse view.
 7. Allow loading of 'pinned' weblink/iframe items from custom actions.
 8. Add option to show horizontally scrollable list of new, recently played,
    most played, radios, and playlists on home screen.
 9. Add "(More)" button on search results header, if more results than shown.
10. Reduce grid size for home screen and for views with only icons.
11. Separate list/grid preference for home screen.
12. Set max width of 1000px for information in browse view.
13. Always use frosted background for queue in desktop layout when not pinned.
14. In desktop layout, always show queue above now-playing if now-playing is
    expanded - regardless of whether queue is pinned or not.
15. Add icon map for xPlay.
16. If set to combine apps and radio then categorise apps.
17. Allow using grid for genres even when genre images are disabled.
18. Only show detailed sub-toolbar if window is at least 400px tall.
19. Allow using detailed sub-toolbar for playlists, if playlist image support
    is enabled.
20. Add text play/add/shuffle buttons for track lists if in width range.
21. If showing detailed sub-toolbar and view is too narrow for image then show
    a semi-transparent (and fading) version on right.
22. If clear queue with 'Play shuffled' enabled then reset queue to not
    shuffled.