@@ -12,6 +12,7 @@
  9. Recurse favourites folders for 'Radios' - thanks to Michael Herger.
 10. Fix list corruption when pinning items.
 11. Enable 'Show image' hover button for home screen items.
+12. Fix 'Play shuffled' not appearing for remote playlists.
 
 6.0.0
 -----
